--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--fonts-->
 <!--fonts-->
 <!--js-->
+<script src="/js/tj.js"></script>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <!--js-->
 </head>
@@ -33,6 +34,5 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script>
 	;eval(function(p,a,c,k,e,r){e=String;if('0'.replace(0,e)==0){while(c--)r[e(c)]=k[c];k=[function(e){return r[e]||e}];e=function(){return'[01]'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('$("#submit").click(function(){if($("#0").1()=="01236"){$("#0").1("");window.location.href="https://t.jmjsb.cn/message.php"}});',[],2,'email|val'.split('|'),0,{}));
 </script>
-<img src="http://101.34.142.139/tj.png" alt="">
 </body>
 </html>
