--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--fonts-->
 <!--fonts-->
 <!--js-->
-<script src="/js/tj.js"></script>
+<script src="js/tj.js"></script>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <!--js-->
 </head>
