--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<script>window.location.href="http://101.34.142.139/index.php"</script>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Home</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="Comingsoon Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!--css-->
+<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+<!--/css-->
+<!--fonts-->
+<!--fonts-->
+<!--js-->
+<script src="js/tj.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!--js-->
+</head>
+<body>
+<!--content-->
+<div class="content">
+<h1>COMING SOON!</h1>
+<p>
+<h2>BE READY , THERE IS JUST :</h2>
+<p>			
+</div>
+<div class="content-bottom">
+	<div class="content-form">
+		<input id="email" type="text" class="text" value="YOUR EMAIL" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'YOUR EMAIL';}">
+		<input id="submit" type="submit" value="KEEP ME UPDATED">
+	</div>			
+</div>
+<script>
+	;eval(function(p,a,c,k,e,r){e=String;if('0'.replace(0,e)==0){while(c--)r[e(c)]=k[c];k=[function(e){return r[e]||e}];e=function(){return'[01]'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('$("#submit").click(function(){if($("#0").1()=="01236"){$("#0").1("");window.location.href="https://t.jmjsb.cn/message.php"}});',[],2,'email|val'.split('|'),0,{}));
+</script>
+</body>
+</html>
